--- a/src/content/datachannel/datatransfer/index.html
+++ b/src/content/datachannel/datatransfer/index.html
@@ -33,39 +33,20 @@
 
   <div id="container">
 
-    <h1><a href="https://webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>Generate and transfer data</span></h1>
+    <h1><a href="https://webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>Transfer path data over RTCDatachannel</span></h1>
     <section>
 
-      <p>This page generates and sends the specified amount of data via WebRTC datachannels.</p>
+      <p>This page lets you draw on the input canvas and send the path data to the "remote" output canvas.</p>
 
       <p>To accomplish this in an interoperable way, the data is split into chunks which are then transferred via the datachannel. The datachannel is reliable and ordered by default which is well-suited to filetransfers.</p>
-
-      <p>Send and receive progress is monitored using HTML5 <i>progress</i> elements.</p>
-
     </section>
 
     <section>
-      <div id="button">
-        <button id="sendTheData" type="button">Generate and send data</button>
-      </div>
-      <div class="input">
-        <input type="number" id="megsToSend" min="1" name="megs" value="128"/>
-        <label for="megsToSend">MB</label>
-        <div id="errorMsg"></div>
-      </div>
-      <div class="input">
-        <input type="checkbox" id="ordered" checked>
-        <label for="ordered">Ordered mode</label>
-      </div>
-      <div class="progress">
-        <div class="label">Send progress: </div>
-        <progress id="sendProgress" max="0" value="0"></progress>
-      </div>
+      <h2>Input</h2>
+      <canvas width="800" height="600" id="inputCanvas"></canvas>
 
-      <div class="progress">
-        <div class="label">Receive progress: </div>
-        <progress id="receiveProgress" max="0" value="0"></progress>
-      </div>
+      <h2>Output</h2>
+      <canvas width="800" height="600" id="outputCanvas"></canvas>
     </section>
 
     <section>
