--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>New codelab: <a href="https://codelabs.developers.google.com/codelabs/webrtc-web">Realtime communication with WebRTC</a></p>
     </div>
 
-    <h1>WebRTC samples</h1>
+    <h1>WebRTC samples by Erik</h1>
 
     <section>
 
